# DataAnalysis

./: .gitignore  README.md  michelle_workspace_test_notebook.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
Cheatsheets /: 1_NumPy_Intro.ipynb  3_Matplotlib_Intro.ipynb  CheatSheetsREADME.md  df_people.csv  df_people.html
DS-BasicLibraries/: 2_Pandas_Intro.ipynb  df_people.json
Projects_/: CheatSheetPandas.ipynb  DataCleaning&Analisis _AmazonMarketplace.ipynb  LinearRegression-SecurityIncident.ipynb  MySQL_CheatSheet.md
Projects_/AmazonSales_Project/: DataCleaning&Analisis_AmazonMarketplace.ipynb
Projects_/DataTreatment/: DataViz-NLS-KDD.ipynb  DatabasePreparation.ipynb  DatabaseSplit.ipynb
Projects_/My Spotify DATA Project :)/: ReadMESpotify.md
Projects_/My Spotify DATA Project :)/2)Notebooks:Analysis&Model/: AnalysisSpotify.ipynb
Projects_/My Spotify DATA Project :)/3)Model Deployment/: ETLSpotify.py  logistic_regression_model.pkl  processed_spotify_data.csv  scaler.pkl  spotifyapp2.py  test.py  train.py
Projects_/MySpotifyDATAProject/: ReadMESpotify.md
Projects_/MySpotifyDATAProject/1_DataCollection/: DataCollection.ipynb
Projects_/MySpotifyDATAProject/2_NotebooksAnalysis&Model/: AnalysisSpotify.ipynb
Projects_/MySpotifyDATAProject/3)Model Deployment/: spotifyapp2.py
Projects_/MySpotifyDATAProject/3_Model Deployment/: appspotify.py  test.py
Projects_/MySpotifyDATAProject/3_ModelDeployment/: spotifyapp2.py
Projects_/Spotify Analysis/: AnalysisSpotify.ipynb
