[tool.poetry]
name = "michelle-workspace"
version = "0.1.0"
description = ""
authors = ["Michelle Mendez <micheellemendez2@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
optuna = "^3.6.1"
jupyter = "^1.0.0"
xgboost = "^2.0.3"
pillow = "^10.3.0"
spotipy = "2.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
